[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
umya-spreadsheet = "1.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Excel reader
calamine = "0.22"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Env
dotenv = "0.15"